# ome_zarr_multiscale_writer

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  setup.cfg  setup.py  test_chunked_performance.py  test_version_consistency.py  test_version_quick.py
examples/: demo_5d_functionality.py  validation_example.py
examples/ome_zarr_examples/example_v4.ome.zarr/: .zattrs
examples/ome_zarr_examples/example_v4.ome.zarr/0/: .zarray
examples/ome_zarr_examples/example_v4.ome.zarr/0/0/0/: 0
examples/ome_zarr_examples/example_v5.ome.zarr/: zarr.json
examples/ome_zarr_examples/example_v5.ome.zarr/0/: zarr.json
examples/ome_zarr_examples/example_v5.ome.zarr/0/c/0/0/: 0
ome_zarr_multiscale_writer/: __init__.py  cli.py  helpers.py  write.py  zarr_reader.py  zarr_tools.py
tests/: 5d_functionality.py  test_5d_functionality.py  test_cli.py  test_multiscale_generation.py  test_validation_functionality.py  test_zarr_reader.py
