[metadata]
name = ome_zarr_multiscale_writer

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/ome_zarr_multiscale_writer
license = BSD-3-Clause
description = Fast one-shot writer for OME-Zarr multiscale image data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/ome_zarr_multiscale_writer/issues
    Documentation = https://github.com/CBI-PITT/ome_zarr_multiscale_writer#README.md
    Source Code = https://github.com/CBI-PITT/ome_zarr_multiscale_writer
    User Support = https://github.com/CBI-PITT/ome_zarr_multiscale_writer/issues

[options]
packages = find:
python_requires = >=3.12
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    pytest
    typer>=0.9
    zarr

[options.entry_points]
console_scripts =
    ome-zarr-multiscale = ome_zarr_multiscale_writer.cli:app

	
